# clyph

./: .gitignore  CHANGELOG.md  Makefile  PRD.md  README.md  ROADMAP.md  WORKFLOW_PILOT.md  catalog.go  catalog_cache_test.go  cli.go  css.go  doc.go  export.go  export_test.go  fmt.go  fmt_test.go  go.mod  identify.go  identify_test.go  main.go  main_test.go  overview.go  overview_test.go  pyproject.toml  semantic.go  semantic_test.go  sets.go  sets_test.go
clyph/: __init__.py  catalog.py  cli.py  css_parser.py
data/: catalog.json  semantic.json  sets.json
docs/demo/: clyph-demo.sh  clyph.cast
testdata/: webfont.css
tests/: test_clyph.py
