[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clyph"
version = "0.1.0"
description = "Deterministic Nerd Font glyph lookup CLI"
readme = "PRD.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[project.scripts]
clyph = "clyph.cli:main"

[tool.setuptools]
packages = ["clyph"]
